# matryoshka

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GAPS.md  LICENSE  README.md  pixi.toml  pyproject.toml  tmpd952_on5_Tn10_p-MH626558.fasta.list
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
matryoshka/: __main__.py  boundaries.py  boundary_refine.py  confidence.py  detect.py  hierarchy.py  output.py  reference_scan.py  transposon.py  viz.py
matryoshka/models/: boundary_model.pkl
matryoshka/references/: MANIFEST.md  gi_sul2.fasta  integron_archetypes.fasta  is26.fasta  isaba125.fasta  isecp1.fasta  mcr1_exemplars.fasta  plasmidfinder_enterobacteriales.fasta  rolling_circle_ter_sites.fasta  tn1331.fasta  tn1546.fasta  tn21.fasta  tn3_family_extras.fasta  tn3_res_site.fasta  tn4401.fasta  tn5393.fasta  tn552.fasta  tn7.fasta
scripts/: benchmark_tncentral.py  eval_boundary_refinement.py  fetch_mge_references.py  fetch_references.py  parse_tncentral.py  parse_tncentral_gt.py  run_benchmark.py  score_benchmark.py  train_boundary_refiner.py
tests/: test_boundaries.py  test_cli.py  test_detect.py  test_hierarchy.py  test_reference_scan.py  test_tn1999.py  test_transposon.py  test_transposon_rules.py
