[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matryoshka"
version = "0.1.0"
description = "Nested mobile genetic element annotation for bacterial genomes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Nabil-Fareed Alikhan", email = "nabil@happykhan.com" },
]
keywords = [
    "bioinformatics",
    "antimicrobial-resistance",
    "mobile-genetic-elements",
    "transposon",
    "plasmid",
    "insertion-sequence",
    "integron",
    "annotation",
    "genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.83",
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/happykhan/matryoshka"
Repository = "https://github.com/happykhan/matryoshka"
Issues = "https://github.com/happykhan/matryoshka/issues"
Changelog = "https://github.com/happykhan/matryoshka/blob/main/CHANGELOG.md"

[project.scripts]
matryoshka = "matryoshka.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["matryoshka"]

[tool.hatch.build.targets.wheel.force-include]
"matryoshka/references" = "matryoshka/references"

[tool.hatch.build.targets.sdist]
include = [
    "/matryoshka",
    "/tests",
    "/scripts",
    "/README.md",
    "/LICENSE",
    "/GAPS.md",
    "/CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501",   # line too long (line-length handles most cases)
    "N803",   # variable name (bioinformatics conventions — isBegin etc.)
    "N806",   # variable in function lowercase (same reason)
    "B008",   # function call in argument default (click uses this pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that take more than a few seconds",
    "requires_blast: test needs blastn on PATH",
    "requires_references: test needs bundled reference FASTAs present",
]

[tool.coverage.run]
source = ["matryoshka"]
omit = [
    "matryoshka/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
